# gradient-boosting-tree

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  callgrind.sh  codecov.yml  coverage.sh  perf.md  perf.sh  run.sh  test.sh
.github/workflows/: cmake.yml
examples/: benchmark.cpp
src/: dataset.hpp  loss.hpp  model.hpp  static_vector.hpp  tree.hpp  tree_algo.hpp  utils.hpp
tests/: dataset_test.cpp  hello_test.cc  loss_test.cpp  model_test.cpp  tests.cpp  tree_test.cpp  utils_test.cpp
